# clifft

./: .clang-format  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  cliff.toml  codecov.yml  index.html  justfile  mkdocs.yml  opcodes.json  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: ClifftVersion.cmake  FetchCatch2.cmake  FetchFastFloat.cmake  FetchNlohmannJson.cmake  FetchStim.cmake
design/:  MVP.plan.md  MVP.plan.md  architecture.md  backend.fix.plan.md  cache-blocked-vm.plan.md  coherent_noise.plan.md  data_structs.md  dense_sim.plan.md  dual_mode.refactor.plan.md  ecosystem.fix.plan.md  exp_value.plan.md  explorer.plan.md  extensions.md  frontend.fix.plan.md  gates.md  importance_sampling.md  magic.plan.md  missing_gates.plan.md  noise.plan.md  optimizer.fix.plan.md  optimizer.plan.md  overview.md  performance_comparison.plan.md  (+14 more)
design.old/: AI.diary.md  MVP.plan.md  architecture.md  c=inject[bell]+cultivate,p=0.001,noise=uniform,g=css,q=14,b=Y,r=5,d1=3.stim  explorer.plan.md  extensions.md  noise.plan.md  overview.md  stim_reference.md
paper/: README.md  bench_common.py  pyproject.toml  tsim_compile_check.py
paper/benchmark/: .gitignore  generator.py  runner.py  verify_sv.py
paper/benchmark/results/: README.md  results_walls.csv
paper/clifford_bench/: README.md  plot_clifford.py  run_benchmark.py
paper/coherent_noise_bench/: run_benchmark.py
paper/distillation_bench/: run_benchmark.py
paper/distillation_bench/circuits/: distillation.stim
paper/magic/: README.md  benchmark_cloud.py  cloud_setup.sh  run_cloud.py  run_vs_soft.py  setup_s3_sync.sh  ucc_soft_sampler.py  validate_local.py
paper/magic/circuits/: circuit_d3_p0.001.stim  circuit_d5_p0.0005.stim  circuit_d5_p0.001.stim  circuit_d5_p0.002.stim  circuit_d5_p0.003.stim  circuit_d5_p0.004.stim  circuit_d5_p0.005.stim
paper/near_clifford_bench/: run_benchmark.py
paper/near_clifford_bench/circuits/: cultivation_d3.stim  cultivation_d5.stim
paper/qv_benchmark/: README.md  __main__.py  bench_fusion.py  generator.py  plot_qv.py  qasm_adapter.py  results.csv  results.html  results_fusion.json  results_old.csv  results_viz.html  run_benchmark.py  validate_hop.py  worker.py
paper/qv_benchmark/analysis/: axis0_avx512_prototype.cpp  perf_investigation.md
paper/three_walls/: plot_walls.py  runner.py
src/clifft/: CMakeLists.txt
src/clifft/api/: reference_syndrome.cc  reference_syndrome.h
src/clifft/backend/: backend.cc  backend.h  compiler_context.h  reference_syndrome.cc  source_map.h
src/clifft/circuit/: circuit.h  gate_data.h  parser.cc  parser.h  target.h
src/clifft/frontend/: frontend.cc  frontend.h  hir.h
src/clifft/optimizer/: bytecode_pass.cc  bytecode_pass.h  commutation.cc  commutation.h  expand_t_pass.cc  expand_t_pass.h  hir_pass.h  hir_pass_manager.cc  hir_pass_manager.h  multi_gate_pass.cc  multi_gate_pass.h  noise_block_pass.cc  noise_block_pass.h  pass_factory.cc  pass_factory.h  pass_registry.h  peephole.cc  peephole.h  remove_noise_pass.cc  remove_noise_pass.h  single_axis_fusion_pass.cc  single_axis_fusion_pass.h  statevector_squeeze_pass.cc  statevector_squeeze_pass.h  swap_meas_pass.cc  swap_meas_pass.h  tile_axis_fusion_pass.cc  tile_axis_fusion_pass.h
src/clifft/svm/: svm.cc  svm.h  svm_avx2.cc  svm_avx512.cc  svm_internal.h  svm_kernels.inl  svm_math.h  svm_scalar.cc  svm_state.cc
src/clifft/util/: bitmask.h  config.h  constants.h  introspection.cc  introspection.h  mask_view.h  pauli_arena.h  version.h.in
src/python/: CMakeLists.txt  _build_config.py.in  bindings.cc
src/python/clifft/: __init__.py  _build_config.py  _cpu_check.py  _sample_result.py
src/python/ucc/: __init__.py  _sample_result.py
src/ucc/: CMakeLists.txt  stub.cc
src/ucc/backend/: backend.cc  backend.h  compiler_context.h  reference_syndrome.cc  reference_syndrome.h  source_map.h
src/ucc/circuit/: circuit.h  gate_data.h  parser.cc  parser.h  target.h
src/ucc/frontend/: frontend.cc  frontend.h  hir.h
src/ucc/optimizer/: bytecode_pass.cc  bytecode_pass.h  commutation.cc  commutation.h  expand_t_pass.cc  expand_t_pass.h  hir_pass.h  hir_pass_manager.cc  hir_pass_manager.h  multi_gate_pass.cc  multi_gate_pass.h  noise_block_pass.cc  noise_block_pass.h  pass.h  pass_factory.cc  pass_factory.h  pass_manager.cc  pass_manager.h  pass_registry.h  peephole.cc  peephole.h  remove_noise_pass.cc  remove_noise_pass.h  single_axis_fusion_pass.cc  single_axis_fusion_pass.h  statevector_squeeze_pass.cc  statevector_squeeze_pass.h  swap_meas_pass.cc  swap_meas_pass.h  tile_axis_fusion_pass.cc  tile_axis_fusion_pass.h
src/ucc/svm/: svm.cc  svm.h  svm_avx2.cc  svm_avx512.cc  svm_internal.h  svm_kernels.inl  svm_math.h  svm_scalar.cc  svm_state.cc
src/ucc/util/: bitmask.h  config.h  constants.h  introspection.cc  introspection.h  version.h.in
src/wasm/: CMakeLists.txt  bindings.cc  test_wasm.mjs
tests/: CMakeLists.txt  test_backend.cc  test_benchmarks.cc  test_bitmask.cc  test_bytecode_passes.cc  test_exp_value.cc  test_frontend.cc  test_helpers.h  test_hir.cc  test_importance_sampling.cc  test_instruction_factory.h  test_mask_view.cc  test_openmp.cc  test_optimizer.cc  test_parser.cc  test_placeholder.cc  test_single_axis_fusion.cc  test_source_map.cc  test_statevector.cc  test_stim_contract.cc  test_svm.cc  test_svm_avx512_axis01.cc  test_svm_risc.cc  test_tile_axis_fusion.cc
tests/fixtures/: cultivation_d5.stim  qv10.stim
tests/python/: clifford_t_oracle.py  conftest.py  test_api.py  test_bytecode_passes.py  test_compile_passes.py  test_exp_value.py  test_importance_sampling.py  test_introspection.py  test_opcode_docs.py  test_openmp.py  test_optimization_invariants.py  test_peephole_oracle.py  test_qiskit_aer.py  test_sample.py  test_single_axis_fusion.py  test_sinter_adapter.py  test_source_map.py  test_statevector_squeeze.py  test_statistical_equivalence.py  test_structural_oracles.py  test_trajectory_oracle.py  utils_fuzzing.py  utils_qiskit.py
(+669 files in other folders)
