[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "ucc"
version = "0.1.0"
description = "Universal Compiler Collection - AOT compiler and VM for quantum circuits"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Brad Chase", email = "brad@unitary.foundation" },
]
keywords = ["quantum", "compiler", "simulation", "clifford", "stabilizer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pre-commit>=3.6",
    "nanobind>=2.0",
    "scikit-build-core>=0.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pre-commit>=3.6",
    "mypy>=1.8",
    "ruff>=0.3",
    "nanobind>=2.0",
    "scikit-build-core>=0.10",
    "stim>=1.10",
]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "prototype/",  # Legacy prototype code, not production
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Allow long lines in test file with embedded circuit (Stim format requires it)
"tests/python/test_statistical_equivalence.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ucc"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
exclude = [
    "^prototype/",  # Legacy prototype code, not production
]

[[tool.mypy.overrides]]
module = ["numpy.*", "stim.*", "pytest.*", "ucc", "ucc._ucc_core"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.coverage.run]
source = ["ucc"]
omit = ["*/_ucc_core*"]  # C++ extension not measurable by Python coverage

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "coverage/python"
